--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -1,6 +1,6 @@
 body 
 {
         text-align: center;
-        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-        color:blanchedalmond;
+        font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        color:rgb(35, 194, 106)
 }
