--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -2,18 +2,30 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  background-color: #f8f8f8;
 }
 
 header {
-  background-color: #333;
+  background-color: #ff6347;
   color: #fff;
   text-align: center;
   padding: 2rem;
+  position: relative; /* Agregamos una posición relativa al contenedor */
+}
+
+header img {
+  display: block; /* Establecemos la imagen como un bloque */
+  margin: 0 auto; /* Margen automático horizontal para centrar */
+  max-width: 100%; /* Aseguramos que la imagen no exceda el ancho del contenedor */
+  position: absolute; /* Ajustamos la posición de la imagen */
+  top: 50%; /* Alineamos la parte superior de la imagen al 50% del contenedor */
+  left: 50%; /* Alineamos la parte izquierda de la imagen al 50% del contenedor */
+  transform: translate(-50%, -50%); /* Movemos la imagen hacia arriba y hacia la izquierda en un 50% del tamaño de la imagen */
 }
 
 header h1 {
-  font-size: 2.5rem;
-  margin: 0;
+  font-size: 3rem;
+  margin: 1rem 0 0; /* Ajustamos el margen superior para dejar espacio debajo de la imagen */
 }
 
 header p {
@@ -21,13 +33,14 @@ header p {
 }
 
 .features {
-  background-color: #f9f9f9;
+  background-color: #fff;
   padding: 2rem;
   text-align: center;
 }
 
 .features h2 {
   margin-bottom: 1.5rem;
+  color: #ff6347;
 }
 
 .features ul {
@@ -41,7 +54,7 @@ header p {
 }
 
 .cta {
-  background-color: #007bff;
+  background-color: #00bfff;
   color: #fff;
   text-align: center;
   padding: 3rem;
@@ -49,11 +62,12 @@ header p {
 
 .cta h2 {
   margin-bottom: 1.5rem;
+  color: #fff;
 }
 
 button {
   background-color: #fff;
-  color: #007bff;
+  color: #00bfff;
   font-size: 1rem;
   padding: 0.8rem 1.5rem;
   border: none;
@@ -61,7 +75,7 @@ button {
 }
 
 footer {
-  background-color: #333;
+  background-color: #ff6347;
   color: #fff;
   text-align: center;
   padding: 1rem;
